labs/meshtraffic-chaos/ratings-vs-delay.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ratings-vs
spec:
  hosts:
  - ratings.USER_NAME_PLACEHOLDER-meshtraffic-chaos.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /ratings
    fault:
      delay:
        percentage:
          value: 50
        fixedDelay: 2s
    route:
    - destination:
        host: ratings
        port:
          number: 9080
